# checkers-minmax-sfml

./: .gitignore  CMakeLists.txt  README.md
src/: AI.cpp  AI.h  Board.cpp  Board.h  ConsoleGame.cpp  ConsoleGame.h  Move.cpp  Move.h  SfmlGame.cpp  SfmlGame.h  main.cpp
